--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Auto Crash</title>
+    <title>Home Monitor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
